--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div class="color-choice" id="red">■</div>
         <div class="color-choice" id="yellow">■</div>
         <div class="color-choice" id="green">■</div>
+        <div class="color-choice" id="purple">■</div>
+        <button id="clear">Clear</button>
     </div>
     <div class="painting">
         <div class="pixel"></div>
